{
  "version": 4,
  "terraform_version": "1.10.2",
  "serial": 64,
  "lineage": "73449de5-10e0-a0b4-c186-dba57e8255c1",
  "resources": [
    {
      "module": "module.aws_humangov_infrastructure[\"california\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "state_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-007855ac798b5175e",
            "arn": "arn:aws:ec2:us-east-1:241533124639:instance/i-0c1cc8a9a1c483a0b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "humangov-california-s3_dynamodb_full_access_instance_profile",
            "id": "i-0c1cc8a9a1c483a0b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "humangov-ec2-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08ae27ec8ba7bf279",
            "private_dns": "ip-172-31-18-207.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.18.207",
            "public_dns": "ec2-52-23-198-229.compute-1.amazonaws.com",
            "public_ip": "52.23.198.229",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06df096d2a19183ad",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "humangov-california-ec2-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e0697b9cb463c6b5",
            "tags": {
              "Name": "humangov-california"
            },
            "tags_all": {
              "Name": "humangov-california"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0254806ec6f54d2c3"
            ]
          },
          "dependencies": [
            "module.aws_humangov_infrastructure.aws_dynamodb_table.state_dynamodb",
            "module.aws_humangov_infrastructure.aws_iam_instance_profile.s3_dynamodb_full_access_instance_profile",
            "module.aws_humangov_infrastructure.aws_iam_role.s3_dynamodb_full_access_role",
            "module.aws_humangov_infrastructure.aws_s3_bucket.state_s3",
            "module.aws_humangov_infrastructure.aws_security_group.state_ec2_sg",
            "module.aws_humangov_infrastructure.random_string.bucket_suffix"
          ]
        }
      ]
    },
    {
      "module": "module.aws_humangov_infrastructure[\"california\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "state_ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:241533124639:security-group/sg-0254806ec6f54d2c3",
            "description": "Allow traffic on ports 22 and 80",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0254806ec6f54d2c3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0839a0304b2efd7fd"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "humangov-california-ec2-sg",
            "name_prefix": "",
            "owner_id": "241533124639",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "humangov-california"
            },
            "tags_all": {
              "Name": "humangov-california"
            },
            "timeouts": null,
            "vpc_id": "vpc-021780bf5e5394ea0"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.aws_humangov_infrastructure[\"florida\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "state_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-007855ac798b5175e",
            "arn": "arn:aws:ec2:us-east-1:241533124639:instance/i-0f764c59a78abff61",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "humangov-florida-s3_dynamodb_full_access_instance_profile",
            "id": "i-0f764c59a78abff61",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "humangov-ec2-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05e5e8c36d12fb3ac",
            "private_dns": "ip-172-31-31-127.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.31.127",
            "public_dns": "ec2-184-72-168-83.compute-1.amazonaws.com",
            "public_ip": "184.72.168.83",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0306053e7cf3a3130",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "humangov-florida-ec2-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e0697b9cb463c6b5",
            "tags": {
              "Name": "humangov-florida"
            },
            "tags_all": {
              "Name": "humangov-florida"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f7fbea713c308b2e"
            ]
          },
          "dependencies": [
            "module.aws_humangov_infrastructure.aws_dynamodb_table.state_dynamodb",
            "module.aws_humangov_infrastructure.aws_iam_instance_profile.s3_dynamodb_full_access_instance_profile",
            "module.aws_humangov_infrastructure.aws_iam_role.s3_dynamodb_full_access_role",
            "module.aws_humangov_infrastructure.aws_s3_bucket.state_s3",
            "module.aws_humangov_infrastructure.aws_security_group.state_ec2_sg",
            "module.aws_humangov_infrastructure.random_string.bucket_suffix"
          ]
        }
      ]
    },
    {
      "module": "module.aws_humangov_infrastructure[\"florida\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "state_ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:241533124639:security-group/sg-0f7fbea713c308b2e",
            "description": "Allow traffic on ports 22 and 80",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f7fbea713c308b2e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0839a0304b2efd7fd"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "humangov-florida-ec2-sg",
            "name_prefix": "",
            "owner_id": "241533124639",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "humangov-florida"
            },
            "tags_all": {
              "Name": "humangov-florida"
            },
            "timeouts": null,
            "vpc_id": "vpc-021780bf5e5394ea0"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.aws_humangov_infrastructure[\"nevada\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "state_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-007855ac798b5175e",
            "arn": "arn:aws:ec2:us-east-1:241533124639:instance/i-0ad05a378d533b42a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "humangov-nevada-s3_dynamodb_full_access_instance_profile",
            "id": "i-0ad05a378d533b42a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "humangov-ec2-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07635cde9036f94ef",
            "private_dns": "ip-172-31-28-37.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.28.37",
            "public_dns": "ec2-44-222-209-133.compute-1.amazonaws.com",
            "public_ip": "44.222.209.133",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f7db0098b5f5091f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "humangov-nevada-ec2-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e0697b9cb463c6b5",
            "tags": {
              "Name": "humangov-nevada"
            },
            "tags_all": {
              "Name": "humangov-nevada"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-040fb6de0b568620a"
            ]
          },
          "dependencies": [
            "module.aws_humangov_infrastructure.aws_dynamodb_table.state_dynamodb",
            "module.aws_humangov_infrastructure.aws_iam_instance_profile.s3_dynamodb_full_access_instance_profile",
            "module.aws_humangov_infrastructure.aws_iam_role.s3_dynamodb_full_access_role",
            "module.aws_humangov_infrastructure.aws_s3_bucket.state_s3",
            "module.aws_humangov_infrastructure.aws_security_group.state_ec2_sg",
            "module.aws_humangov_infrastructure.random_string.bucket_suffix"
          ]
        }
      ]
    },
    {
      "module": "module.aws_humangov_infrastructure[\"nevada\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "state_ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:241533124639:security-group/sg-040fb6de0b568620a",
            "description": "Allow traffic on ports 22 and 80",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-040fb6de0b568620a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0839a0304b2efd7fd"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "humangov-nevada-ec2-sg",
            "name_prefix": "",
            "owner_id": "241533124639",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "humangov-nevada"
            },
            "tags_all": {
              "Name": "humangov-nevada"
            },
            "timeouts": null,
            "vpc_id": "vpc-021780bf5e5394ea0"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}